Add standard resposes; Tidy up controllers
