# internal/response/response.go
@@ -1,0 +1,10 @@
+package response
+
+type ApiResponse struct {
+	Message string `json:"message"`
+	Data    any    `json:"data"`
+}
+
+type ErrorResponse struct {
+	Error string `json:"error"`
+}
